<resources>
    <string name="app_name">The Lost/Found Property</string>

    <string name="show_pwd">Şifreyi Göster</string>
    <string name="hide_pwd">Şifreyi Gizle</string>
    <string name="fullName">Ad Soyad</string>
    <string name="hint_username">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="confirmPassword">Tekrar Şifre</string>
    <string name="terms_conditions">Şartları kabul ediyorum.</string>
    <string name="signUp">Kayıt Ol</string>
    <string name="login">Giriş</string>
    <string name="forgot">Şifreyi Unuttum!</string>
    <string name="spinner_title">Şehir Seç</string>
    <string name="action_settings">Settings</string>
    <string name="add_comment">Yorum Ekle</string>


    <string name="FCM_PREF">com.team3.softwareeng.LoginSign.fcm_pref</string>
    <string name="FCM_TOKEN">com.team3.softwareeng.LoginSign.fcm_token</string>
    <string name="title_activity_prop_maps">Map</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="editButtonOptions">
        <item>Arka planı değiştir.</item>
        <item>Profili güncelle.</item>
        <item>Çıkış yap.</item>
    </string-array>
    <string-array name="lostorfind">
        <item>Kayıp</item>
        <item>Buldum</item>
    </string-array>
    <string-array name="anotherUserEditButtonOptions">
        <item>Şikayet Et.</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aasdassad">aasdassad</string>


    <string name="gallery">GALERİ</string>
    <string name="photo">KAMERA</string>
    <string name="string_open_camera">Kamerayı Aç</string>
    <string name="string_next">Devam</string>
    <string name="string_share">Paylaş</string>
    <string name="selected_image">selected_image</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="selected_bituri">selected_bitmap</string>

    <string-array name="kms">
        <item>1 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>15 km</item>
        <item>20 km</item>
    </string-array>

</resources>
