<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <com.github.siyamed.shapeimageview.CircularImageView
                android:id="@+id/signupProf"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:src="@drawable/default_avatar"
                app:siBorderColor="@color/black"
                app:siBorderWidth="4dp" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/fullName"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/siyah"
                android:textColorHint="@color/siyah"
                android:textSize="16sp" />


            <View
                android:id="@+id/view7"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/siyah" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_username"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/siyah"
                android:textColorHint="@color/siyah"
                android:textSize="16sp" />
            <View
                android:id="@+id/view11"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/siyah" />

            <EditText
                android:id="@+id/userEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/siyah"
                android:textColorHint="@color/siyah"
                android:textSize="16sp" />

            <View
                android:id="@+id/view8"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/siyah" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/selectLoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/selectLocProgress"
                    android:padding="10dp"
                    android:text="Konum Seçin!"
                    android:textColor="@color/siyah"
                    android:textSize="15sp" />

                <ProgressBar
                    android:id="@+id/selectLocProgress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="20dp" />
            </RelativeLayout>

            <View
                android:id="@+id/view9"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/siyah" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/passowrd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/siyah"
                android:textColorHint="@color/siyah"
                android:textSize="16sp" />


            <View
                android:id="@+id/view12"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/siyah" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/siyah"
                android:textColorHint="@color/siyah"
                android:textSize="16sp" />

            <View
                android:id="@+id/view10"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/siyah" />

            <CheckBox
                android:id="@+id/terms_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/terms_conditions"
                android:textColor="@color/siyah"
                android:textSize="14sp" />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/round"
                android:padding="3dp"
                android:text="@string/signUp"
                android:textColor="#CBD1DC"
                android:textSize="17sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>