<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/zoologo"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_launcher"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:id="@+id/zoo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:text="Lost Property"
                    android:textColor="#2C3646"
                    android:gravity="center"
                    android:layout_below="@+id/zoologo"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    />

                <com.team3s.lostpropertyse.Utils.MyTextView
                    android:id="@+id/signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Giriş Yap"
                    android:textColor="#00051f"
                    android:textSize="17dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_below="@+id/zoo"
                    android:layout_marginTop="20dp"
                    />
                <LinearLayout
                    android:id="@+id/main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signin"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="#a9b0c3"
                        android:textSize="13dp"
                        android:background="#00000000"
                        android:paddingLeft="8dp"
                        android:id="@+id/login_emailid"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#a9b0c3"
                        android:layout_marginTop="10dp"

                        >
                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_password"
                        android:hint="@string/passowrd"
                        android:inputType="textPassword"
                        android:textColorHint="#a9b0c3"
                        android:layout_marginTop="20dp"
                        android:textSize="13dp"
                        android:background="#00000000"
                        android:paddingLeft="8dp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#a9b0c3"
                        android:layout_marginTop="10dp"
                        >
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <CheckBox
                            android:id="@+id/show_hide_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/show_pwd"
                            android:textColor="#00051f"
                            android:textSize="14sp" />

                        <com.team3s.lostpropertyse.Utils.MyTextView
                            android:id="@+id/forgot_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/show_hide_password"
                            android:layout_alignBottom="@+id/show_hide_password"
                            android:layout_alignParentEnd="true"
                            android:text="Şifreyi Unuttum!"
                            android:textColor="#2C3646"
                            android:textSize="13dp" />
                    </RelativeLayout>

                    <Button
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Giriş!"
                        android:textStyle="bold"
                        android:background="@drawable/round"
                        android:textColor="#CBD1DC"
                        android:gravity="center"
                        android:padding="14dp"
                        android:layout_marginTop="20dp"/>

                    <com.team3s.lostpropertyse.Utils.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ya da:"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:textColor="#2C3646"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/main"
                        android:layout_marginTop="10dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/sign_in_button"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/google" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/main"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    >


                </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>